update pattern glyph to avoid overlapping circles

--- a/src/src/components/CircularView/styles.scss
+++ b/src/src/components/CircularView/styles.scss
@@ -1,6 +1,8 @@
 .CircularOverview {
   width: 58%;
   margin-right: 5px;
+  height:720px;
+  border: 1px solid #808080;
 }
 
 .tooltip {
